@@ -5013,6 +5013,12 @@ Nor should the C++11 random number library be used, nor any other
 third-party random number generators such as those in GSL.
 
 @item
+Use of @code{sprintf} and @code{vsprintf} is regarded as a potential
+security risk and warned about on some platforms.@footnote{including
+macOS as from version 13.}  @command{R CMD check} reports if any calls
+are found.
+
+@item
 Errors in memory allocation and reading/writing outside arrays are very
 common causes of crashes (e.g., segfaults) on some machines.
 See @ref{Checking memory access} for tools which can be used to look for this.
